--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   keyboard_dismisser: ^3.0.0
   mask_text_input_formatter: ^2.9.0
   pin_code_fields: ^8.0.1
+  google_maps_flutter: ^2.12.2
 
 dev_dependencies:
   flutter_test:
@@ -42,39 +43,25 @@ flutter:
   assets:
     - assets/i10n/
     - assets/svg/
+    - assets/svg/tab_icons/
     - assets/png/
     - assets/fonts/
 
   fonts:
-    - family: Roboto
-      fonts:
-        - asset: assets/fonts/Roboto/Roboto-Thin.ttf
-          weight: 100
-        - asset: assets/fonts/Roboto/Roboto-ExtraLight.ttf
-          weight: 200
-        - asset: assets/fonts/Roboto/Roboto-Light.ttf
-          weight: 300
-        - asset: assets/fonts/Roboto/Roboto-Regular.ttf
-          weight: 400
-        - asset: assets/fonts/Roboto/Roboto-Medium.ttf
-          weight: 500
-        - asset: assets/fonts/Roboto/Roboto-SemiBold.ttf
-          weight: 600
-        - asset: assets/fonts/Roboto/Roboto-Bold.ttf
-          weight: 700
-        - asset: assets/fonts/Roboto/Roboto-ExtraBold.ttf
-          weight: 800
-        - asset: assets/fonts/Roboto/Roboto-Black.ttf
-          weight: 900
-
     - family: SF-Pro
       fonts:
-        - asset: assets/fonts/Sf-pro/SFPRODISPLAYREGULAR.otf
+        - asset: assets/fonts/Sf-pro/SF-Pro-Text-Light.otf
+          weight: 300
+        - asset: assets/fonts/Sf-pro/SF-Pro-Text-Regular.otf
           weight: 400
-        - asset: assets/fonts/Sf-pro/SFPRODISPLAYMEDIUM.otf
+        - asset: assets/fonts/Sf-pro/SF-Pro-Text-Medium.otf
           weight: 500
-        - asset: assets/fonts/Sf-pro/SFPRODISPLAYBOLD.otf
+        - asset: assets/fonts/Sf-pro/SF-Pro-Text-Semibold.otf
+          weight: 600
+        - asset: assets/fonts/Sf-pro/SF-Pro-Text-Bold.otf
           weight: 700
+        - asset: assets/fonts/Sf-pro/SF-Pro-Text-Heavy.otf
+          weight: 800
         
 
 
