--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   mask_text_input_formatter: ^2.9.0
   pin_code_fields: ^8.0.1
   google_maps_flutter: ^2.12.2
+  carousel_slider: ^5.1.1
 
 dev_dependencies:
   flutter_test:
