--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: gym_pro
 description: "A new Flutter project."
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
-version: 1.0.0+1
+version: 1.0.2+3
 
 environment:
   sdk: ^3.7.2
@@ -30,6 +30,8 @@ dependencies:
   pin_code_fields: ^8.0.1
   google_maps_flutter: ^2.12.2
   carousel_slider: ^5.1.1
+  mobile_scanner: ^7.0.1
+  url_launcher: ^6.3.1
 
 dev_dependencies:
   flutter_test:
